hphp/test/zend7/Zend/tests/bug44141.php.expectf

Fatal error: %s
Stack trace:
#0 %s(%d): Y::cheat(5)
#1 {main}
  thrown in %sbug44141.php on line 15